# agentbeats-purple-pi-bench

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
docs/: video-script.md
scripts/: local_test.sh
src/: agent.py  executor.py  server.py
submissions/: agentbeats-sprint4.md
tests/: test_executor.py  test_smoke.py
